--- a/image-iris/Dockerfile
+++ b/image-iris/Dockerfile
@@ -3,7 +3,7 @@ FROM containers.intersystems.com/intersystems/irishealth-community:2024.2
 USER irisowner
 
 WORKDIR /dur
-#COPY --chown=irisowner:irisowner --chmod=700 src /dur
+COPY --chown=irisowner:irisowner --chmod=700 src /dur
 
 
 RUN find . -name '.DS_Store' -type f -delete
@@ -14,7 +14,8 @@ RUN apt update
 RUN apt install -y openjdk-11-jdk
 
 USER irisowner
-RUN iris start $ISC_PACKAGE_INSTANCENAME 
+RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
+/dur/init/init.sh 
 
 
 
