--- a/image-iris/Dockerfile
+++ b/image-iris/Dockerfile
@@ -1,12 +1,5 @@
 #IRIS
 FROM containers.intersystems.com/intersystems/irishealth-community:2024.2
-USER irisowner
-
-WORKDIR /dur
-COPY --chown=irisowner:irisowner --chmod=700 src /dur
-
-
-RUN find . -name '.DS_Store' -type f -delete
 
 USER root
 RUN apt -y remove temurin-8-jdk*
@@ -14,8 +7,22 @@ RUN apt update
 RUN apt install -y openjdk-11-jdk
 
 USER irisowner
+WORKDIR /dur
+COPY --chown=irisowner:irisowner --chmod=700 src /dur
+RUN find . -name '.DS_Store' -type f -delete
+
+WORKDIR /dur/IGPackages
+RUN ls *.tgz | xargs -n1 tar xzvf
+WORKDIR /dur
+
 RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
-/dur/init/init.sh 
+/dur/init/init.sh
+
+#RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
+#/dur/init/loadPackages.sh
+
+#RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
+#/dur/init/loadPackages.sh
 
 
 
