--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,6 @@ services:
         ports:
             - 1980:1972 
             - 52880:52773
-        command: 
-            - -a
-            - iris session iris -U%SYS '##class(Security.Users).UnExpireUserPasswords("*")'
-            - --check-caps false
-            - --log /usr/irissys/mgr/messages.log
+        command: --check-caps false --ISCAgent false --log /usr/irissys/mgr/messages.log
         
 
