--- a/image-iris/Dockerfile
+++ b/image-iris/Dockerfile
@@ -13,17 +13,9 @@ RUN find . -name '.DS_Store' -type f -delete
 
 WORKDIR /dur/IGPackages
 RUN ls *.tgz | xargs -n1 tar xzvf
+
 WORKDIR /dur
-
 RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
-/dur/init/init.sh
+    /dur/init/init.sh 
 
-#RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
-#/dur/init/loadPackages.sh
-
-#RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
-#/dur/init/loadPackages.sh
-
-
-
-
+#    > /dur/run.log
