IG web app released/V1.0 released

--- a/image-iris/Dockerfile
+++ b/image-iris/Dockerfile
@@ -5,6 +5,7 @@ USER root
 RUN apt -y remove temurin-8-jdk*
 RUN apt update
 RUN apt install -y openjdk-11-jdk
+RUN apt install unzip
 
 USER irisowner
 WORKDIR /dur
@@ -14,7 +15,7 @@ RUN find . -name '.DS_Store' -type f -delete
 WORKDIR /dur/IGPackages
 RUN ls *.tgz | xargs -n1 tar xzvf
 WORKDIR /dur/FullIG
-RUN ls *.zip | xargs -n1 tar xzvf
+RUN unzip full-ig.zip && rm full-ig.zip
 
 WORKDIR /dur
 RUN iris start $ISC_PACKAGE_INSTANCENAME &&\
